# ChunkWise

./: .gitignore  LICENSE  README.md  pyproject.toml
chunkwise/: __init__.py  base.py  chunk.py  chunker.py  config.py  exceptions.py
chunkwise/embeddings/: __init__.py  base.py  openai_embed.py  sentence_transformers_embed.py
chunkwise/language/: __init__.py  detector.py
chunkwise/language/arabic/: __init__.py  preprocessor.py  sentence_splitter.py  tokenizer.py
chunkwise/language/english/: __init__.py  preprocessor.py  sentence_splitter.py
chunkwise/llm/: __init__.py  anthropic_llm.py  base.py  openai_llm.py
chunkwise/strategies/: __init__.py  agentic.py  contextual.py  document_structure.py  document_summary.py  fixed.py  format_specific.py  hierarchical.py  hybrid.py  late.py  paragraph.py  parent_document.py  recursive.py  semantic.py  sentence.py  sentence_window.py  sliding_window.py
chunkwise/tokenizers/: __init__.py  base.py  simple.py  tiktoken_tokenizer.py
chunkwise/utils/: __init__.py  overlap.py  text.py
examples/: 01_basic_usage.py  02_arabic_chunking.py  03_semantic_chunking.py  04_agentic_chunking.py  05_rag_pipeline.py  06_mixed_language.py
tests/: __init__.py  conftest.py  test_arabic.py  test_chunker.py
tests/test_strategies/: __init__.py  test_fixed.py  test_recursive.py  test_sentence.py
