[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chunkwise"
version = "1.0.0"
description = "Text chunking library for Arabic and English with 31 strategies for RAG systems"
authors = ["Hesham Haroon <heshamharoon9@gmail.com>"]
license = "LicenseRef-NonCommercial"
readme = "README.md"
homepage = "https://github.com/h9-tec/ChunkWise"
repository = "https://github.com/h9-tec/ChunkWise"
documentation = "https://github.com/h9-tec/ChunkWise#readme"
keywords = [
    "nlp",
    "text-chunking",
    "rag",
    "arabic-nlp",
    "embeddings",
    "semantic-chunking",
    "text-splitting",
    "llm",
    "retrieval",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Arabic",
    "Natural Language :: English",
]
packages = [{include = "chunkwise"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0"
tiktoken = "^0.5.0"
langdetect = "^1.0.9"
regex = "^2023.0.0"
numpy = ">=1.24.0,<3.0.0"

# Arabic NLP (optional but recommended)
pyarabic = {version = "^0.6.15", optional = true}
camel-tools = {version = "^1.5.0", optional = true}

# Embeddings (optional)
sentence-transformers = {version = "^2.2.0", optional = true}
openai = {version = "^1.0.0", optional = true}

# LLM support (optional)
anthropic = {version = "^0.18.0", optional = true}
ollama = {version = "^0.1.0", optional = true}

# Document parsing (optional)
beautifulsoup4 = {version = "^4.12.0", optional = true}
markdown = {version = "^3.5.0", optional = true}
lxml = {version = "^5.0.0", optional = true}

[tool.poetry.extras]
arabic = ["pyarabic", "camel-tools"]
embeddings = ["sentence-transformers", "openai"]
llm = ["openai", "anthropic", "ollama"]
documents = ["beautifulsoup4", "markdown", "lxml"]
all = [
    "pyarabic",
    "camel-tools",
    "sentence-transformers",
    "openai",
    "anthropic",
    "ollama",
    "beautifulsoup4",
    "markdown",
    "lxml",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.5.0"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
